--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -19,14 +19,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_favorite_chars"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_label_character"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/listitem_favorite_characters"
-      />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_label_character"
+        tools:listitem="@layout/listitem_favorite_characters" />
 
     <TextView
         android:id="@+id/tv_label_starship"
@@ -34,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="Starships"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="rv_favorite_chars"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_favorite_chars"
 
         />
@@ -42,10 +43,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_favorite_starships"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
