--- a/app/src/main/res/layout/listitem_favorite_characters.xml
+++ b/app/src/main/res/layout/listitem_favorite_characters.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gender"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_name" />
 
@@ -34,8 +34,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ships:"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_gender" />
+
+    <TextView
+        android:id="@+id/tv_fav_films"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Films:"
+        android:textFontWeight="@integer/material_motion_duration_short_1"
+        android:layout_marginTop="10dp"
+        android:inputType="textMultiLine"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_fav_ships" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
