--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -8,9 +8,13 @@
 
     <TextView
         android:id="@+id/tv_label_character"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Characters"
+        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:background="@color/cardview_dark_background"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,9 +35,13 @@
 
     <TextView
         android:id="@+id/tv_label_starship"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Starships"
+        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:background="@color/cardview_dark_background"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_favorite_chars"
