- UI improvements - Code refactoring

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Characters"
-        android:layout_marginLeft="10dp"
-        android:padding="5dp"
+        android:padding="@dimen/starwar_padding"
         android:background="@color/cardview_dark_background"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,8 +24,7 @@
         android:id="@+id/rv_favorite_chars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Starships"
-        android:layout_marginLeft="10dp"
-        android:padding="5dp"
+        android:padding="@dimen/starwar_padding"
         android:background="@color/cardview_dark_background"
         android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,8 +49,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_favorite_starships"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
