--- a/app/src/main/res/layout/listitem_favorite_starships.xml
+++ b/app/src/main/res/layout/listitem_favorite_starships.xml
@@ -6,12 +6,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/material_dynamic_neutral_variant10"
     android:layout_margin="20dp"
   >
 
     <TextView
         android:id="@+id/tv_fav_shipname"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Name:"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,7 +23,7 @@
 
     <TextView
         android:id="@+id/tv_fav_model"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Model:"
         android:layout_marginTop="20dp"
@@ -31,7 +32,7 @@
 
     <TextView
         android:id="@+id/tv_fav_manufacturer"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Manufacturer:"
         android:layout_marginTop="20dp"
