--- a/app/src/main/res/layout/listitem_home_starships.xml
+++ b/app/src/main/res/layout/listitem_home_starships.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_listitme_characters"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_margin="@dimen/starwar_margin"
+    android:background="@drawable/shape"
     android:paddingBottom="2dp">
 
     <TextView
@@ -13,6 +15,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name:"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Model:"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_shipname" />
 
@@ -31,26 +38,30 @@
         android:id="@+id/tv_manufacturer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:text="Manufacturer:"
-        app:layout_constraintStart_toEndOf="@+id/tv_model"
-        app:layout_constraintTop_toBottomOf="@+id/tv_shipname" />
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_model" />
 
     <TextView
         android:id="@+id/tv_passenger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Passenger:"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_model" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_manufacturer" />
 
     <ImageButton
         android:id="@+id/button_fav_starship"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:adjustViewBounds="true"
-        android:src="@android:drawable/btn_star"
+        android:src="@drawable/baseline_favorite_black_24"
         android:text="Button"
+        android:layout_marginEnd="@dimen/starwar_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@+id/tv_passenger"
