--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="starwar_margin">10dp</dimen>
     <dimen name="starwar_padding">5dp</dimen>
+    <dimen name="starwar_margin3x">30dp</dimen>
 </resources>
