--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -11,10 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Characters"
-        android:textStyle="bold"
         android:padding="@dimen/starwar_padding"
+        android:background="@color/cardview_dark_background"
         android:textColor="@color/white"
-        android:background="@color/starwar_darkgreen"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,10 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Starships"
-        android:textStyle="bold"
         android:padding="@dimen/starwar_padding"
+        android:background="@color/cardview_dark_background"
         android:textColor="@color/white"
-        android:background="@color/starwar_darkgreen"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_favorite_chars"
