--- a/app/src/main/res/layout/listitem_favorite_characters.xml
+++ b/app/src/main/res/layout/listitem_favorite_characters.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_fav_listitme_character"
     android:layout_width="wrap_content"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/shape"
     android:layout_margin="20dp"
 >
 
@@ -15,9 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,8 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gender"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
+        android:layout_marginTop="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_name" />
 
@@ -39,8 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ships:"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
+        android:layout_marginTop="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_gender" />
 
@@ -49,13 +43,9 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Films:"
-        android:textColor="@color/white"
         android:textFontWeight="@integer/material_motion_duration_short_1"
-        android:layout_margin="@dimen/starwar_margin"
-        android:paddingRight="@dimen/starwar_padding"
+        android:layout_marginTop="@dimen/starwar_margin"
         android:inputType="textMultiLine"
-        android:maxLines="7"
-        android:ellipsize="end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_ships" />
 
