--- a/app/src/main/res/layout/listitem_favorite_starships.xml
+++ b/app/src/main/res/layout/listitem_favorite_starships.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_fav_listitme_starship"
     android:layout_width="wrap_content"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/shape"
+    android:background="@color/material_dynamic_neutral_variant10"
     android:layout_margin="20dp"
   >
 
@@ -15,9 +15,6 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Name:"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,8 +26,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Model:"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_shipname" />
 
@@ -39,8 +35,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Manufacturer:"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_model"  />
 
@@ -49,8 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Passenger:"
-        android:textColor="@color/white"
-        android:layout_margin="@dimen/starwar_margin"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_manufacturer"  />
 
