--- a/app/src/main/res/layout/listitem_favorite_starships.xml
+++ b/app/src/main/res/layout/listitem_favorite_starships.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_fav_listitme_starship"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:orientation="vertical"
-    android:background="@color/material_dynamic_neutral_variant10"
+    android:background="@drawable/shape"
     android:layout_margin="20dp"
   >
 
@@ -15,6 +14,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Name:"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +28,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Model:"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_shipname" />
 
@@ -35,7 +38,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Manufacturer:"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_model"  />
 
@@ -44,7 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Passenger:"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/starwar_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_fav_manufacturer"  />
 
